--- a/public/m/less/index.less
+++ b/public/m/less/index.less
@@ -1,34 +1,6 @@
-@bgc: #006699;
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-body {
-    background-color: #fff;
-    height: 100%;
-}
-// 顶部
-.topbar {
-    background-color: @bgc;
-    height: 45px;
-    line-height: 45px;
-    text-align: center;
-    color: #fff;
-    font-size: 18px;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 99;
-    width: 100%;
 
-    .fa-search {
-       position: absolute;
-       top: 15px;
-       right: 15px;
-       color: #fff;
-    }
-}
+@import './base.less';
+
 // 导航
 nav {
     padding: 10px;
@@ -88,30 +60,4 @@ nav {
            
         }
     }
-}
-//底部
-#footer {
-    height: 45px;
-    width: 100%;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    background-color: @bgc;
-    z-index: 99;
-    
-    a{
-        color: #fff;
-        text-align: center;
-        font-size: 16px;
-       padding: 10px;
-
-        span {
-            display: block;
-            font-size: 12px;
-        }
-    }
-}
-.main {
-    padding: 45px 0;
-    // height: 100%;
 }
