--- a/public/m/less/product.less
+++ b/public/m/less/product.less
@@ -1,5 +1,16 @@
 @import './base.less';
+body,html {
+    height: 100%;
+}
 .main {
+    height: 100%;
+    .contain {
+        height: 100%;
+        position: relative;
+    }
+    #refreshContainer {
+        
+
    .orderbar {
        background-color: #efeff4;
        a {
@@ -10,4 +21,5 @@
            line-height: 30px;
        }
    } 
+    }
 }
