--- a/public/m/less/base.less
+++ b/public/m/less/base.less
@@ -33,7 +33,7 @@ body {
     a {
        position: absolute;
        top: 15px;
-       right: 15px;
+       left: 15px;
        color: #fff;
     }
 }
@@ -65,11 +65,12 @@ body {
 //主体
 .main {
     padding: 45px 0;
-    // height: 100%;
+    
 }
 //商品列表
 .pro {
         padding: 5px;
+        
         >a {
             text-align: center;
             display: block;
@@ -79,7 +80,11 @@ body {
                 width: 100%;
             }
             >p {
-
+                overflow: hidden;  
+        text-overflow: ellipsis;  
+        display: -webkit-box;  
+        -webkit-line-clamp: 2;  
+        -webkit-box-orient: vertical;  
             }
             >div {
 
