--- a/public/m/less/productBuy.less
+++ b/public/m/less/productBuy.less
@@ -36,9 +36,11 @@
             .num {
                 border: 1px solid #ccc;
                 font-size: 16px;
-                padding: 3px;
-               
+                padding: 3px;               
                 margin-bottom: 10px;
+                &.active {
+                    background-color: orange;
+                }
             }
         }
         .product-num {
